--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,24 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--SpringBoot的aop编程-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!--加入jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <repositories>
@@ -139,12 +157,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--使用热部署出现中文乱码解决方案-->
                 <configuration>
                     <fork>true</fork>
                     <!--增加jvm参数-->
                     <jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
                     <!--指定入口类-->
-
+                    <mainClass>com.baizhi.DefaultMapperApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
